@@ -2,6 +2,7 @@ package entity;
 
 import main.GamePanel;
 import main.UtilityTool;
+import org.jetbrains.annotations.NotNull;
 
 import javax.imageio.ImageIO;
 import java.awt.*;
@@ -12,7 +13,7 @@ import java.util.Objects;
 import java.util.Random;
 
 public class Entity {
-    GamePanel gp;
+    final GamePanel gp;
 
     public BufferedImage up1, up2, down1, down2, left1, left2, right1, right2;
     public BufferedImage attackUp1, attackUp2, attackDown1, attackDown2, attackLeft1, attackLeft2, attackRight1, attackRight2, 
@@ -22,7 +23,7 @@ public class Entity {
     public Rectangle attackArea = new Rectangle(0, 0, 0, 0);
     public int solidAreaDefaultX, solidAreaDefaultY;
     public boolean collision = false;
-    public String[][] dialogues = new String[20][20];
+    public final String[][] dialogues = new String[20][20];
     public Entity attacker;
     public String knockBackDirection;
     public Entity linkedEntity;
@@ -88,7 +89,7 @@ public class Entity {
     public boolean boss;
 
     // Item Attributes
-    public ArrayList<Entity> inventory = new ArrayList<>();
+    public final ArrayList<Entity> inventory = new ArrayList<>();
     public final int maxInventorySize = 20;
     public int value;
     public int attackValue;
@@ -120,13 +121,11 @@ public class Entity {
     }
 
     public int getScreenX() {
-        int screenX = worldX - gp.player.worldX + gp.player.screenX;
-        return screenX;
+        return worldX - gp.player.worldX + gp.player.screenX;
     }
 
     public int getScreenY() {
-        int screenY = worldY - gp.player.worldY + gp.player.screenY;
-        return screenY;
+        return worldY - gp.player.worldY + gp.player.screenY;
     }
 
     public int getLeftX() {
@@ -154,38 +153,31 @@ public class Entity {
     }
 
     public int getCenterX() {
-        int centerX = worldX + left1.getWidth() / 2;
-        return centerX;
+        return worldX + left1.getWidth() / 2;
     }
 
     public int getCenterY() {
-        int centerY = worldY + up1.getHeight() / 2;
-        return centerY;
+        return worldY + up1.getHeight() / 2;
     }
 
-    public int getXDistance(Entity target) {
-        int xDistance = Math.abs(getCenterX() - target.worldX);
-        return xDistance;
+    public int getXDistance(@NotNull Entity target) {
+        return Math.abs(getCenterX() - target.worldX);
     }
 
-    public int getYDistance(Entity target) {
-        int yDistance = Math.abs(getCenterY() - target.worldY);
-        return yDistance;
+    public int getYDistance(@NotNull Entity target) {
+        return Math.abs(getCenterY() - target.worldY);
     }
 
     public int getTileDistance(Entity target) {
-        int tileDistance = (getXDistance(target) + getYDistance(target)) / gp.tileSize;
-        return tileDistance;
+        return (getXDistance(target) + getYDistance(target)) / gp.tileSize;
     }
 
-    public int getGoalCol(Entity target) {
-        int goalCol = (target.worldX + target.solidArea.x) / gp.tileSize;
-        return goalCol;
+    public int getGoalCol(@NotNull Entity target) {
+        return (target.worldX + target.solidArea.x) / gp.tileSize;
     }
 
-    public int getGoalRow(Entity target) {
-        int goalRow = (target.worldY + target.solidArea.y) / gp.tileSize;
-        return goalRow;
+    public int getGoalRow(@NotNull Entity target) {
+        return (target.worldY + target.solidArea.y) / gp.tileSize;
     }
 
     public void resetCounter() {
@@ -208,7 +200,7 @@ public class Entity {
     public void setLoot(Entity loot) {}
 
     /**
-     * Defines the action or behavior of the entity in a specific game context.
+     * Defines the action or behaviour of the entity in a specific game context.
      * This method is responsible for determining and setting the current state or
      * sequence of actions the entity should perform. The implementation typically
      * includes logic for deciding the entity's movements, attacks, interactions,
@@ -227,7 +219,7 @@ public class Entity {
 
     /**
      * Handles the reaction of the entity when it takes damage.
-     * This method is responsible for managing behavior, animations, or state changes
+     * This method is responsible for managing behaviour, animations, or state changes
      * that occur when the entity is subjected to damage.
      */
     public void damageReaction() {}
@@ -264,7 +256,7 @@ public class Entity {
     }
 
     /**
-     * Defines the interaction behavior of an entity within the game.
+     * Defines the interaction behaviour of an entity within the game.
      * This method manages what happens when the entity interacts with
      * another entity, object, or element in its environment. The implementation
      * typically varies based on the entity's type and context within the game,
@@ -303,13 +295,12 @@ public class Entity {
     }
 
     /**
-     * Retrieves the color of the particle associated with this entity.
+     * Retrieves the colour of the particle associated with this entity.
      *
-     * @return the color of the particle, or null if no color is defined
+     * @return the colour of the particle, or null if no colour is defined
      */
     public Color getParticleColor() {
-        Color color = null;
-        return color;
+        return null;
     }
 
     /**
@@ -318,8 +309,7 @@ public class Entity {
      * @return the size of the particle as an integer
      */
     public int getParticleSize() {
-        int size = 0;
-        return size;
+        return 0;
     }
 
     /**
@@ -328,8 +318,7 @@ public class Entity {
      * @return the speed of the particle as an integer
      */
     public int getParticleSpeed() {
-        int speed = 0;
-        return speed;
+        return 0;
     }
 
     /**
@@ -338,26 +327,25 @@ public class Entity {
      * @return the maximum particle life as an integer
      */
     public int getParticleMaxLife() {
-        int maxLife = 0;
-        return maxLife;
+        return 0;
     }
 
-    public void generateParticle(Entity generator, Entity target) {
-        // TODO: Make particle generation more dynamic and random
-
+    public void generateParticle(@NotNull Entity generator, Entity target) {
         Color color = generator.getParticleColor();
         int size = generator.getParticleSize();
         int speed = generator.getParticleSpeed();
         int maxLife = generator.getParticleMaxLife();
 
-        Particle p1 = new Particle(gp, target, color, size, speed, maxLife, -2, -1);
-        Particle p2 = new Particle(gp, target, color, size, speed, maxLife, 2, -1);
-        Particle p3 = new Particle(gp, target, color, size, speed, maxLife, -2, 1);
-        Particle p4 = new Particle(gp, target, color, size, speed, maxLife, 2, 1);
-        gp.particleList.add(p1);
-        gp.particleList.add(p2);
-        gp.particleList.add(p3);
-        gp.particleList.add(p4);
+        Random random = new Random();
+        int[] xOffsets = {-2, 2, -2, 2};
+        int[] yOffsets = {-1, -1, 1, 1};
+
+        for (int i = 0; i < 4; i++) {
+            int xOffset = xOffsets[i] + random.nextInt(3) - 1; // Randomise between -3 and 3
+            int yOffset = yOffsets[i] + random.nextInt(3) - 1; // Randomise between -2 and 2
+            Particle p = new Particle(gp, target, color, size, speed, maxLife, xOffset, yOffset);
+            gp.particleList.add(p);
+        }
     }
 
     public void checkCollision() {
@@ -375,14 +363,14 @@ public class Entity {
     }
 
     /**
-     * Updates the state and behavior of the entity during each game cycle.
+     * Updates the state and behaviour of the entity during each game cycle.
      * <p>
      * This method is responsible for managing the entity's movement, actions,
      * and animations based on its current state and conditions. It handles
-     * several behaviors, including knockback, attacking, collision checking,
+     * several behaviours, including knockback, attacking, collision checking,
      * invincibility, and other status effects like off-balance.
      * <p>
-     * Key behaviors include:
+     * Key behaviours include:
      * - Handling knockback mechanics: movement and the resolution of collision during knockback.
      * - Managing attacking actions through the `attacking` method.
      * - Setting and executing the entity's actions when not in a special state.
@@ -398,22 +386,23 @@ public class Entity {
                     knockBackCounter = 0;
                     knockBack = false;
                     speed = defaultSpeed;
-                } else if (!collisionOn) {
-                    switch (knockBackDirection) {
-                        case "up":
-                            worldY -= speed;
-                            break;
-                        case "down":
-                            worldY += speed;
-                            break;
-                        case "left":
-                            worldX -= speed;
-                            break;
-                        case "right":
-                            worldX += speed;
-                            break;
-                    }
+                } else
+                {
+                switch (knockBackDirection) {
+                    case "up":
+                        worldY -= speed;
+                        break;
+                    case "down":
+                        worldY += speed;
+                        break;
+                    case "left":
+                        worldX -= speed;
+                        break;
+                    case "right":
+                        worldX += speed;
+                        break;
                 }
+            }
 
                 knockBackCounter++;
                 if (knockBackCounter == 10) {
@@ -477,8 +466,7 @@ public class Entity {
         }
     }
     
-    // TODO: Prob rename this to something better
-    public void checkStartChasing(Entity target, int distance, int rate) {
+    public void startChasingPlayer(Entity target, int distance, int rate) {
         // Check if the player is near
         if (getTileDistance(target) < distance) {
             int i = new Random().nextInt(rate);
@@ -489,9 +477,9 @@ public class Entity {
         }
     }
     
-    // TODO: Prob rename this to something better
-    public void checkStopChasing(Entity target, int distance, int rate) {
-        // If the monster is on the path and the player are far away, stop following the player
+    @SuppressWarnings("GrazieInspection")
+    public void stopChasingPlayer(Entity target, int distance, int rate) {
+        // If the monster is on the path and the player is far away, stop following the player
         if (getTileDistance(target) > distance) {
             int i = new Random().nextInt(rate);
 
@@ -539,25 +527,14 @@ public class Entity {
         }
     }
 
-    public String getOppositeDirection(String direction) {
-        String oppositeDirection = "";
-        
-        switch (direction) {
-            case "up":
-                oppositeDirection = "down";
-                break;
-            case "down":
-                oppositeDirection = "up";
-                break;
-            case "left":
-                oppositeDirection = "right";
-                break;
-            case "right":
-                oppositeDirection = "left";
-                break;
-        }
-        
-        return oppositeDirection;
+    public String getOppositeDirection(@NotNull String direction) {
+        return switch (direction) {
+            case "up" -> "down";
+            case "down" -> "up";
+            case "left" -> "right";
+            case "right" -> "left";
+            default -> "";
+        };
     }
 
     public void attacking() {
@@ -574,7 +551,7 @@ public class Entity {
             int solidAreaWidth = solidArea.width;
             int solidAreaHeight = solidArea.height;
 
-            // Adjust the players world position for the attack area
+            // Adjust the player's world position for the attack area
             switch (direction) {
                 case "up": worldY -= attackArea.height; break;
                 case "down": worldY += attackArea.height; break;
@@ -655,9 +632,8 @@ public class Entity {
         }
     }
 
-    // TODO: Prob rename this to something better
     public void checkProjectile(int rate, int shotInterval) {
-        // Check if it can it shoot a projectile
+        // Check if it can shoot a projectile
         int i = new Random().nextInt(rate);
         if (i == 0 && !projectile.alive && shotAvailableCounter == shotInterval) {
             projectile.set(worldX, worldY, direction, true, this);
@@ -711,7 +687,7 @@ public class Entity {
         }
     }
 
-    public void setKnockBack(Entity target, Entity attacker, int knockBackPower) {
+    public void setKnockBack(@NotNull Entity target, @NotNull Entity attacker, int knockBackPower) {
         this.attacker = attacker;
         target.knockBackDirection = attacker.direction;
         target.speed += knockBackPower;
@@ -719,24 +695,19 @@ public class Entity {
     }
 
     public boolean inCamera() {
-        boolean inCamera = false;
 
         // 5 times cause the skeleton boss is big
-        if (worldX + gp.tileSize * 5 > gp.player.worldX - gp.player.screenX &&
+
+        return worldX + gp.tileSize * 5 > gp.player.worldX - gp.player.screenX &&
                 worldX - gp.tileSize < gp.player.worldX + gp.player.screenX &&
                 worldY + gp.tileSize * 5 > gp.player.worldY - gp.player.screenY &&
-                worldY - gp.tileSize < gp.player.worldY + gp.player.screenY
-        ) {
-            inCamera = true;
-        }
-
-        return inCamera;
+                worldY - gp.tileSize < gp.player.worldY + gp.player.screenY;
     }
 
     /**
      * Draws the character or object on the screen based on its position, direction,
      * movement, and actions such as attacking or being invincible. The method also
-     * handles optimizations to only render elements visible within the screen bounds
+     * handles optimisations to only render elements visible within the screen bounds
      * and displays additional visual elements like health bars or dying animations.
      *
      * @param g2 the {@code Graphics2D} object used for rendering images and shapes
@@ -827,19 +798,19 @@ public class Entity {
         }
     }
 
-    public void changeAlpha(Graphics2D g2, float alphaValue) {
+    public void changeAlpha(@NotNull Graphics2D g2, float alphaValue) {
         g2.setComposite(AlphaComposite.getInstance(AlphaComposite.SRC_OVER, alphaValue));
     }
 
     public BufferedImage setup(String imagePath, int width, int height) {
         UtilityTool uTool = new UtilityTool();
-        BufferedImage image = null;
+        BufferedImage image;
 
         try {
             image = ImageIO.read(Objects.requireNonNull(getClass().getClassLoader().getResourceAsStream(imagePath + ".png")));
             image = uTool.scaleImage(image, width, height);
         } catch (IOException e) {
-            e.printStackTrace();
+            throw new RuntimeException(e);
         }
 
         return image;
@@ -849,12 +820,12 @@ public class Entity {
         int startCol = (worldX + solidArea.x) / gp.tileSize;
         int startRow = (worldY + solidArea.y) / gp.tileSize;
 
-        gp.pFinder.setNodes(startCol, startRow, goalCol, goalRow, this);
+        gp.pFinder.setNodes(startCol, startRow, goalCol, goalRow);
 
         if (gp.pFinder.search()) {
             // Next worldX and worldY
-            int nextX = gp.pFinder.pathList.get(0).col * gp.tileSize;
-            int nextY = gp.pFinder.pathList.get(0).row * gp.tileSize;
+            int nextX = gp.pFinder.pathList.getFirst().col * gp.tileSize;
+            int nextY = gp.pFinder.pathList.getFirst().row * gp.tileSize;
 
             // Entity's solid area position
             int enLeftX = worldX + solidArea.x;
@@ -904,16 +875,16 @@ public class Entity {
                 }
             }
 
-            // If th entity reaches the goal, stop the path
-            int nextCol = gp.pFinder.pathList.get(0).col;
-            int nextRow = gp.pFinder.pathList.get(0).row;
+            // If the entity reaches the goal, stop the path
+            int nextCol = gp.pFinder.pathList.getFirst().col;
+            int nextRow = gp.pFinder.pathList.getFirst().row;
             if (nextCol == goalCol && nextRow == goalRow) {
                 onPath = false;
             }
         }
     }
 
-    public int getDetected(Entity user, Entity[][] target, String targetName) {
+    public int getDetected(@NotNull Entity user, Entity[][] target, String targetName) {
         int index = 999;
         // Check surrounding objects
         int nextWorldX = user.getLeftX();
